Fixed Page Responsiveness, Added Table, Added Contact Form

--- a/about.html
+++ b/about.html
@@ -32,9 +32,10 @@ Tested: 3/9/2024
             <li class="dropdown">
                 <a href="projects.html">Projects</a>
                 <ul class="dropdowncontent">
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
+                    <li><a href="#project1">Project 1</a></li>
+                    <li><a href="#project2">Project 2</a></li>
+                    <li><a href="#project3">Project 3</a></li>
+                    <li><a href="#project4">Project 4</a></li>
                 </ul>
             </li>
             <li><a href="reflection.html">Reflection</a></li>
@@ -81,7 +82,7 @@ Tested: 3/9/2024
             </blockquote>
         </div>
         <footer>
-            <div class="footer-left">&copy; 2024 Stefan Tomovski. All rights reserved.</div>
+            <div class="footer-left">&copy; 2024 Stefan Tomovski.</div>
             <div class="footer-center">Author: Stefan Tomovski</div>
             <div class="footer-contact">
                 <img src="email-icon.png" alt="Email Icon" style="width:20px; height:auto;">
