--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@ Tested: 3/9/2024
                 <li class="dropdown">
                     <a href="projects.html">Projects</a>
                     <ul class="dropdowncontent">
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
+                        <li><a href="#project1">Project 1</a></li>
+                        <li><a href="#project2">Project 2</a></li>
+                        <li><a href="#project3">Project 3</a></li>
+                        <li><a href="#project4">Project 4</a></li>
                     </ul>
                 </li>
                 <li><a href="reflection.html">Reflection</a></li>
@@ -48,7 +49,7 @@ Tested: 3/9/2024
 
 
 
-        <div class="content-wrap">
+
         <h2>About Me</h2>
 
         <p>        Welcome to my career portfolio! My name is Stefan Tomovski, and I will be going over my
@@ -65,10 +66,41 @@ Tested: 3/9/2024
         objective of this website would be to inform readers about my competencies and the way they align with
         projects I have completed. I will also use the website to list job experience and how it has influenced my
         problem-solving skills and all-around critical thinking.</p>
+        <div class="table-container">
+            <figure>
+                <figcaption>Projects Overview</figcaption>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Project</th>
+                            <th>Description</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Project 1</td>
+                            <td>Development of an IT solution.</td>
+                            <td>Completed</td>
+                        </tr>
+                        <tr>
+                            <td>Project 2</td>
+                            <td>Equipment Move.</td>
+                            <td>Completed</td>
+                        </tr>
+                        <tr>
+                            <td>Project 3</td>
+                            <td>Upgrade of network infrastructure.</td>
+                            <td>Planned</td>
+                        </tr>
 
-    </div>
+                    </tbody>
+                </table>
+            </figure>
+        </div>
+
     <footer>
-        <div class="footer-left">&copy; 2024 Stefan Tomovski. All rights reserved.</div>
+        <div class="footer-left">&copy; 2024 Stefan Tomovski.</div>
         <div class="footer-center">Author: Stefan Tomovski</div>
         <div class="footer-contact">
             <img src="email-icon.png" alt="Email Icon" style="width:20px; height:auto;">
