--- a/projects.html
+++ b/projects.html
@@ -35,9 +35,10 @@ Tested: 3/9/2024
             <li class="dropdown">
                 <a href="projects.html">Projects</a>
                 <ul class="dropdowncontent">
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
+                    <li><a href="#project1">Project 1</a></li>
+                    <li><a href="#project2">Project 2</a></li>
+                    <li><a href="#project3">Project 3</a></li>
+                    <li><a href="#project4">Project 4</a></li>
                 </ul>
             </li>
             <li><a href="reflection.html">Reflection</a></li>
@@ -48,7 +49,7 @@ Tested: 3/9/2024
         <h1>Stefan Tomovski's Projects Page</h1>
 
         <div class="projects-container">
-            <div class="project-item">
+            <div class="project-item" id="project1">
                 <img src="Picture1.png" alt="Project Image 1">
                 <p>For my projects I decided to go with the learning technologies portfolio where we list competencies and align a project with how we demonstrated those competencies. A competency I have that 
                     has been proved by working together with groups is communication. Using effective communication, I have collaborated with a group to create software that allows a user to interact with and 
@@ -56,7 +57,7 @@ Tested: 3/9/2024
                      html. Our group didn’t have any issues with communicating over text, email, and discord. The artifact I chose was a screenshot of the files posted to my GitHub. All the files in that screenshot
                       are linked to each other and are necessary tools for the stock visualizer to function. Overall, it was a great learning experience cooperating with my group to get this project completed.</p>
             </div>
-            <div class="project-item">
+            <div class="project-item" id="project2">
                 <img src="Picture2.png" alt="Project Image 2" id="resize">
                 <p>The next large project I would like to mention was when a department ordered 20 brand new laptops for new users and employees. This project demonstrated the competency of 
                     organization and time management. When the equipment arrived it needed to be added to the inventory system that we use to track equipment, and the equipment also needed to be added
@@ -67,7 +68,7 @@ Tested: 3/9/2024
                         took about a week to complete and no hinderances occurred other than when devices would inconsistently fall off the whitelist requiring my coworker to whitelist the IP address. Overall,
                          the project was successful, everything was done very quickly, and all devices were correctly labeled and imaged, which demonstrates time management.</p>
             </div>
-            <div class="project-item">
+            <div class="project-item" id="project3">
                 <img src="Picture3.png" alt="Project Image 3">
 
                          <p>The next competency I would like to align a project with was when we demonstrated teamwork. The project I worked on with a team was at my internship for the School of Medicine, we moved the 
@@ -77,7 +78,7 @@ Tested: 3/9/2024
                              linked is a photo of my coworker Tom hooking up the correct port so a user could get internet. Overall, our team was very quick, resourceful, and responsive so the project went very smoothly
                               with only a few hiccups.</p>
             </div>
-            <div class="project-item">
+            <div class="project-item" id="project4">
                 <img src="Picture4.PNG" alt="Project Image 4">
                 <p>Finally, the last project I would like to talk about is the project I worked on for my senior Capstone class. I worked together with 4 other group mates to create an application that allows
                     upcoming freshman Mizzou students living in the dorms to select the dorm they will be moving into. Following their selection they will be promted with room styles where they will select the kind
@@ -92,7 +93,7 @@ Tested: 3/9/2024
 
 
         <footer>
-            <div class="footer-left">&copy; 2024 Stefan Tomovski. All rights reserved.</div>
+            <div class="footer-left">&copy; 2024 Stefan Tomovski.</div>
             <div class="footer-center">Author: Stefan Tomovski</div>
             <div class="footer-contact">
                 <img src="email-icon.png" alt="Email Icon" style="width:20px; height:auto;">
