--- a/contact.html
+++ b/contact.html
@@ -32,21 +32,23 @@ Tested: 4/3/2024
             <li class="dropdown">
                 <a href="projects.html">Projects</a>
                 <ul class="dropdowncontent">
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
+                    <li><a href="#project1">Project 1</a></li>
+                    <li><a href="#project2">Project 2</a></li>
+                    <li><a href="#project3">Project 3</a></li>
+                    <li><a href="#project4">Project 4</a></li>
                 </ul>
             </li>
             <li><a href="reflection.html">Reflection</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
+        
     </nav>
     <h2 class="headercenter">Contact</h2>
 
     <div class="flex-container">
         <div class="headshot">
             <img class="imgshadow" src="ProfessionalHeadshot.PNG" alt="Stefan Tomovski">
-        
+
     </div>
   
 
@@ -63,33 +65,39 @@ Tested: 4/3/2024
         </div>
 
         <div class="form-container">
-            <form action="/submit-your-form-handler" method="POST">
+            <form action="mailto:tomovski@missouri.edu?subject=Portfolio/Professional Website Contact" method="POST" enctype="text/plain">
                 <div class="form-row">
-                    <label for="name">
-                        Name:
-                        <input type="text" id="name" name="name" required>
-                    </label>
-                    <label for="email">
-                        Email:
-                        <input type="email" id="email" name="email" required>
-                    </label>
+                    <div class="form-field">
+                        <label for="first-name">First Name:</label>
+                        <input type="text" id="first-name" name="first-name" placeholder="First name" required autofocus>
+                    </div>
+                    <div class="form-field">
+                        <label for="last-name">Last Name:</label>
+                        <input type="text" id="last-name" name="last-name" placeholder="Last name" required>
+                    </div>
                 </div>
                 <div class="form-row">
-                    <label for="message">
-                        Message:
-                        <textarea id="message" name="message" required></textarea>
-                    </label>
+                    <div class="form-field">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" placeholder="email@example.com" required>
+                    </div>
+                    <div class="form-field">
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" placeholder="Write your message here" required></textarea>
+                    </div>
                 </div>
-                <button type="submit">Send</button>
+                <div class="form-row">
+                    <button type="submit">Send</button>
+                </div>
             </form>
         </div>
 
         <footer>
-            <div class="footer-left">&copy; 2024 Stefan Tomovski. All rights reserved.</div>
+            <div class="footer-left">&copy; 2024 Stefan Tomovski.</div>
             <div class="footer-center">Author: Stefan Tomovski</div>
             <div class="footer-contact">
                 <img src="email-icon.png" alt="Email Icon" style="width:20px; height:auto;">
-                <a href="mailto:tomovski@missouri.edu">tomovski@missouri.edu</a>
+                <a href="mailto:tomspamemail00@yahoo.com">tomovski@missouri.edu</a>
                 <img src="phone-icon.png" alt="Phone Icon" style="width:20px; height:auto;">
                 <span> 1+888-888-8888</span> 
             </div>
