--- a/reflection.html
+++ b/reflection.html
@@ -34,9 +34,10 @@ Tested: 3/9/2024
             <li class="dropdown">
                 <a href="projects.html">Projects</a>
                 <ul class="dropdowncontent">
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
+                    <li><a href="#project1">Project 1</a></li>
+                    <li><a href="#project2">Project 2</a></li>
+                    <li><a href="#project3">Project 3</a></li>
+                    <li><a href="#project4">Project 4</a></li>
                 </ul>
             </li>
             <li><a href="reflection.html">Reflection</a></li>
@@ -48,7 +49,7 @@ Tested: 3/9/2024
             <h1> Welcome to my Reflection Page!</h1>
 
 
-        <div class="content-wrap">
+  
         <h2>Reflection</h2>
 
  
@@ -89,9 +90,8 @@ Tested: 3/9/2024
         </main>
 
 
-    </div>
     <footer>
-        <div class="footer-left">&copy; 2024 Stefan Tomovski. All rights reserved.</div>
+        <div class="footer-left">&copy; 2024 Stefan Tomovski.</div>
         <div class="footer-center">Author: Stefan Tomovski</div>
         <div class="footer-contact">
             <img src="email-icon.png" alt="Email Icon" style="width:20px; height:auto;">
