Minor Fixes, Validated CSS+HTML, Fixed Contact Page, Finalized Project

--- a/reflection.html
+++ b/reflection.html
@@ -88,6 +88,38 @@ Tested: 3/9/2024
             learning the necessary skills. I believe that this job combined with my school experience has taught me
             the required technical skills about hardware and software that will be beneficial in cybersecurity. </p>
         </main>
+        <div class="table-container">
+            <figure>
+                <figcaption>Projects Overview</figcaption>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Project</th>
+                            <th>Description</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Project 1</td>
+                            <td>Development of an IT solution.</td>
+                            <td>Completed</td>
+                        </tr>
+                        <tr>
+                            <td>Project 2</td>
+                            <td>Equipment Move.</td>
+                            <td>Completed</td>
+                        </tr>
+                        <tr>
+                            <td>Project 3</td>
+                            <td>Upgrade of network infrastructure.</td>
+                            <td>Planned</td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </figure>
+        </div>
 
 
     <footer>
