--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@ Tested: 4/3/2024
         </div>
 
         <div class="form-container">
-            <form action="mailto:tomovski@missouri.edu?subject=Portfolio/Professional Website Contact" method="POST" enctype="text/plain">
+            <form action="mailto:tomovski@missouri.edu?subject=Portfolio/Professional%20Website%20Contact" method="POST" enctype="text/plain">
                 <div class="form-row">
                     <div class="form-field">
                         <label for="first-name">First Name:</label>
