Fixed Media Queries on Nav bar

--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@ Tested: 4/3/2024
             <li><a href="reflection.html">Reflection</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        
     </nav>
+    <body>
     <h2 class="headercenter">Contact</h2>
 
     <div class="flex-container">
@@ -91,7 +91,7 @@ Tested: 4/3/2024
                 </div>
             </form>
         </div>
-
+        </body>
         <footer>
             <div class="footer-left">&copy; 2024 Stefan Tomovski.</div>
             <div class="footer-center">Author: Stefan Tomovski</div>
