--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Tested: 3/9/2024
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-
+        <body>
 
             <h1>    Welcome to my career portfolio!</h1>
 
@@ -98,7 +98,7 @@ Tested: 3/9/2024
                 </table>
             </figure>
         </div>
-
+    </body>
     <footer>
         <div class="footer-left">&copy; 2024 Stefan Tomovski.</div>
         <div class="footer-center">Author: Stefan Tomovski</div>
