--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@ Tested: 3/9/2024
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-
+        <body>
         <h1>Stefan Tomovski's Projects Page</h1>
 
         <div class="projects-container">
@@ -90,7 +90,7 @@ Tested: 3/9/2024
             </div>
         </div>
     
-
+        </body>
 
         <footer>
             <div class="footer-left">&copy; 2024 Stefan Tomovski.</div>
