--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ Tested: 3/9/2024
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Page - Stefan's Career Portfolio</title>
     </head>
-
+    
     <nav>
         <div class="hamburger">&#9776;</div>
         <ul>
@@ -42,7 +42,7 @@ Tested: 3/9/2024
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-
+    <body>
     <h1>Stefan Tomovski</h1>
 
 
@@ -81,6 +81,7 @@ Tested: 3/9/2024
                 -Martin Luther King Jr.<cite>Hubspot</cite>
             </blockquote>
         </div>
+    </body>
         <footer>
             <div class="footer-left">&copy; 2024 Stefan Tomovski.</div>
             <div class="footer-center">Author: Stefan Tomovski</div>
