--- a/reflection.html
+++ b/reflection.html
@@ -45,7 +45,7 @@ Tested: 3/9/2024
         </ul>
     </nav>
 
-
+        <body>
             <h1> Welcome to my Reflection Page!</h1>
 
 
@@ -120,7 +120,7 @@ Tested: 3/9/2024
                 </table>
             </figure>
         </div>
-
+    </body>
 
     <footer>
         <div class="footer-left">&copy; 2024 Stefan Tomovski.</div>
