--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@ Tested: 3/9/2024
                 </table>
             </figure>
         </div>
-    </body>
+
+        <a href='https://www.free-counters.org/'>free Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=5b634b6ab6864f113af94ec9c450b12d23e4e1a1'></script>
+        <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1180245/t/2"></script>
+
     <footer>
         <div class="footer-left">&copy; 2024 Stefan Tomovski.</div>
         <div class="footer-center">Author: Stefan Tomovski</div>
@@ -109,6 +112,6 @@ Tested: 3/9/2024
             <span> 1+888-888-8888</span> 
         </div>
     </footer>
-
+</body>
 
 </html>
