--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Tested: 3/9/2024
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <body>
+
 
             <h1>    Welcome to my career portfolio!</h1>
 
@@ -99,8 +99,8 @@ Tested: 3/9/2024
             </figure>
         </div>
 
-        <a href='https://www.free-counters.org/'>free Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=5b634b6ab6864f113af94ec9c450b12d23e4e1a1'></script>
-        <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1180245/t/2"></script>
+        <a href='https://www.free-counters.org/'>free Counters</a> <script src='https://www.freevisitorcounters.com/auth.php?id=5b634b6ab6864f113af94ec9c450b12d23e4e1a1'></script>
+        <script src="https://www.freevisitorcounters.com/en/home/counter/1180245/t/2"></script>
 
     <footer>
         <div class="footer-left">&copy; 2024 Stefan Tomovski.</div>
